--- a/js_photos.html
+++ b/js_photos.html
@@ -6,23 +6,23 @@
   <link rel="stylesheet" href="css/photo.css">
 </head>
 <body>
-  <h1>Snapshots</h1>
-  <ul>
-    <li>
-      <a href="pngs/1.jpg" title="first photo" onclick="showPic(this);return false">First</a>
-    </li>
-    <li>
-      <a href="pngs/2.jpg" title="second photo" onclick="showPic(this);return false">Second</a>
-    </li>
-    <li>
-      <a href="pngs/3.jpg" title="third photo" onclick="showPic(this);return false">Third</a>
-    </li>
-    <li>
-      <a href="pngs/4.jpg" title="fourth photo" onclick="showPic(this);return false">Fourth</a>
-    </li>
-  </ul>
-  <img src="pngs/blog3.jpg" alt="my photo gallery" id="replace">
-  <p id="describe">change a photo!</p>
+<h1>Snapshots</h1>
+<ul id="gallery">
+  <li>
+    <a href="pngs/1.jpg" title="first photo"><img src="pngs/1.jpg"></a>
+  </li>
+  <li>
+    <a href="pngs/2.jpg" title="second photo"><img src="pngs/2.jpg"></a>
+  </li>
+  <li>
+    <a href="pngs/3.jpg" title="third photo"><img src="pngs/3.jpg"></a>
+  </li>
+  <li>
+    <a href="pngs/4.jpg" title="fourth photo"><img src="pngs/4.jpg"></a>
+  </li>
+</ul>
+<!--<img src="pngs/blog3.jpg" alt="my photo gallery" id="replace">-->
+<!--<p id="describe">change a photo!</p>-->
 </body>
 <script src="js/photo.js"></script>
 </html>
