--- a/js_photos.html
+++ b/js_photos.html
@@ -24,5 +24,7 @@
 <!--<img src="pngs/blog3.jpg" alt="my photo gallery" id="replace">-->
 <!--<p id="describe">change a photo!</p>-->
 </body>
+<script src="js/addLoadEvent.js"></script>
 <script src="js/photo.js"></script>
+
 </html>
