--- a/explanation.html
+++ b/explanation.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" media="screen" href="css/typography.css">
 </head>
 <body>
+<ul id="navigation">
+  <li><a href="index.html" accesskey="1">Home</a></li>
+  <li><a href="search.html" accesskey="4">Search</a></li>
+  <li><a href="contact.html" accesskey="9">Contact</a></li>
+</ul>
 <h1>What is the Document Object Model?</h1>
 <p>
   The <abbr title="World Wide Web Consortium">W3C</abbr> defines the <abbr title="Document Object Model">DOM</abbr> as:
@@ -21,5 +26,9 @@
   that can be used to navigate <abbr title="HyperText Markup Language">HTML</abbr>
   and <abbr title="eXtensible Markup Language">XML</abbr> documents.
 </p>
+<script src="js/addLoadEvent.js"></script>
+<script src="js/displayAbbreviations.js"></script>
+<script src="js/displayCitations.js"></script>
+<script src="js/displayAccesskeys.js"></script>
 </body>
 </html>
