--- a/list.html
+++ b/list.html
@@ -13,11 +13,9 @@
     <li><a href="presentation.html">presentation</a></li>
     <li><a href="behavior.html">behavior</a></li>
   </ol>
-  <div id="slideshow">
-    <img src="pngs/00.png" alt="动漫" id="preview" width="800" height="200">
-  </div>
-<script src="js/addLoadEvent.js"></script>
-<script src="js/moveElement.js"></script>
-<script src="js/prepareSlideShow.js"></script>
+  <script src="js/addLoadEvent.js"></script>
+  <script src="js/moveElement.js"></script>
+  <script src="js/insertAfter.js"></script>
+  <script src="js/prepareSlideShow.js"></script>
 </body>
 </html>
